Fix button dimensions on iOS

--- a/src/components/Grid/Grid.module.css
+++ b/src/components/Grid/Grid.module.css
@@ -40,6 +40,8 @@
   font-size: 1.5em;
 
   transition: 0.25s all;
+  width: 100%;
+  height: 100%;
 }
 
 button.letter {
